# Agent-frontend

./: .gitignore  Dockerfile  Dockerfile.python  Dockerfile.typescript  README.md  TODO.txt  dev.sh  docker-compose.yml  next.config.ts  package-lock.json  package.json  prompt copy.ts  prompt.ts  test-connection.cjs  test-connection.mts  testdb.ts  tsconfig.json
Agent-Python/: agentic_ai copy.py  agentic_ai.py  agentic_without_tool.py  progress_save.json  pyproject.toml  server.py
Agent-Python/uploads/: Transcript01สวัสดี.txt  Transcript03.txt
prisma/: schema.prisma
sandbox-templates/next.js/: e2b.toml
src/app/: globals.css  layout.tsx
src/app/(home)/: layout.tsx  page.tsx
src/app/api/inngest/: route.ts
src/app/api/push-to-github/: route.ts
src/app/api/python-restAPI/: route.ts
src/app/api/save-data/: route.ts
src/app/projects/[projectId]/: page.tsx
src/components/ui/: TemplateCard.tsx  TemplateGrid.tsx  file-explorer.tsx  hint.tsx
src/components/ui/code-view/: index.tsx  tree-view.tsx
src/inngest/: client.ts  daily-Agent copy.ts  daily-Agent.ts  deepSearch-Agent copy.ts  deepSearch-Agent.ts  frontend-Agent copy.ts  frontend-Agent.ts  functions copy 2.ts  functions copy.ts  python-ai-agent-template.ts  utils.ts
src/lib/: db.ts  python.ts  utils.ts
src/modules/UI/components/: ResizablePanel.tsx  fragment-web.tsx  message-card.tsx  message-from.tsx  messages-container.tsx  project-header.tsx  python-message-loading.tsx
src/modules/UI/views/: project-view.tsx
src/modules/home/: contants.ts
src/trpc/routers/: _app.ts
vscode/: settings.json
(+4 files in other folders)
